--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
   }
 }
 </script>
+<style>
+    @keyframes rain-fall {
+      from {
+        transform: translateY(-100px);
+      }
+      to {
+        transform: translateY(100vh);
+      }
+    }
+  </style>
 </head>
   <body class="bg-gray-900">
     <div id="root"></div>
